# texteditor

./: CMakeLists.txt  README.md  cutefish-editor.desktop  qml.qrc
debian/: changelog  control  copyright
qml/: CTabBar.qml  CTabButton.qml  TabView.qml  TextEditor.qml  main.qml
src/: documenthandler.cpp  documenthandler.h  highlightmodel.cpp  main.cpp  texteditor.cpp  texteditor.h
